[package]
name = "route8-server"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.86"
chrono = "0.4.38"
native-tls = "0.2.12"
serde = { version = "1.0.203", features = ["derive"] }
serde_json = "1.0.117"
serde_yaml = "0.9.34"
tokio = { version = "1.38.0", features = ["full"] }
tokio-native-tls = "0.3.1"
