[package]
name = "route8-server"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.86"
chrono = "0.4.38"
native-tls = "0.2.12"
once_cell = "1.19.0"
serde = { version = "1.0.203", features = ["derive"] }
serde_json = "1.0.117"
serde_yaml = "0.9.34"
tokio = { version = "1.38.0", features = ["full"] }
tokio-native-tls = "0.3.1"
tokio-postgres = { version = "0.7.10", features = ["with-serde_json-1"] }
tokio-postgres-native-tls = "0.1.0-rc.1"
tokio-postgres-rustls = "0.12.0"
tokio-rustls = "0.26.0"
tokio-tls = "0.3.1"
